--- a/ComparisonThm/Proj6.tex
+++ b/ComparisonThm/Proj6.tex
@@ -56,7 +56,7 @@
 \newcommand{\linktoprf}[1]{\hyperlink{#1}{To complete proof.}}
 \newcommand{\targetprf}[1]{\hypertarget{#1}{Proof of \autoref{#1}}}
 
-\title{Note 6: Preliminaries to comparison theorems}
+\title{Note 6: Preliminaries to Comparison Theorems}
 \date{} % 显示日期
 
 \renewcommand\refname{Reference}
